--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "flet-stack"
-version = "0.1.0"
+version = "0.2.0"
 description = "Decorator-based routing with view stacking for Flet applications"
 readme = "README.md"
 authors = [
@@ -16,18 +16,18 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: User Interfaces",
 ]
 keywords = ["flet", "routing", "router", "navigation", "ui", "view-stack"]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
-    "flet>=0.19.0",
+    "flet>=0.70.0.dev6281",
 ]
 
 [project.urls]
